--- a/project.tex
+++ b/project.tex
@@ -102,6 +102,7 @@ While the project will focus on specific tools and scenarios, its methodology ca
     \item CodeCloud. "Static and Dynamic Code Analysis Tools." \url{https://sonarcloud.io}
     \item ArgoCD. "GitOps Continuous Delivery." \url{https://argoproj.github.io}
     \item Kubernetes. "Official Documentation." \url{https://kubernetes.io/docs/home/}
+    \item Github - Repository. "Official Repository of the Project." \url{https://github.com/BrenesRM/DevSecOps-NYIT-VAN}
 \end{itemize}
 
 \end{document}
