--- a/project.tex
+++ b/project.tex
@@ -53,7 +53,7 @@ This project aims to implement a secure Software Supply Chain framework by autom
 
 \subsection*{Testing and Validation}
 \begin{itemize}
-    \item Simulate supply chain attacks (e.g., malicious dependencies).
+    \item Simulate supply chain misconfiguration (e.g., incorrect securing development practices).
     \item Assess pipeline resilience and effectiveness.
 \end{itemize}
 
@@ -73,7 +73,7 @@ Kubernetes (Minikube/AKS), Docker, secure image repositories.
 Cloud-based or local testing environment (Azure or VM).
 
 \subsection*{Data}
-Open-source vulnerable applications (e.g., Juice Shop) if apply.
+Open-source vulnerable applications (e.g., Juice Shop) if applicable.
 
 \section{Contribution to Knowledge}
 This project will contribute by:
@@ -91,8 +91,8 @@ While the project will focus on specific tools and scenarios, its methodology ca
     \item \textbf{Week 1-2}: Research and define project scope; set up GitHub Actions.
     \item \textbf{Week 3-5}: Integrate Snyk and CodeCloud; document initial findings.
     \item \textbf{Week 6-8}: Apply OWASP practices; set up ArgoCD and Kubernetes.
-    \item \textbf{Week 9-10}: Simulate and test supply chain attacks; refine pipeline security.
-    \item \textbf{Week 11-12}: Document results; finalize paper and project presentation.
+    \item \textbf{Week 9-11}: Simulate and test supply chain attacks; refine pipeline security.
+    \item \textbf{Week 12-14}: Document results; finalize paper and project presentation.
 \end{itemize}
 
 \section{References/Bibliography}
